--- a/frontend/src/config/_sizes.scss
+++ b/frontend/src/config/_sizes.scss
@@ -1,5 +1,6 @@
 $max-page-width: 935px;
 $max-card-width: 600px;
+$max-notifi-width: 500px;
 $small-font-size: 12px;
 $normal-font-size: 14px;
 $big-font-size: 16px;
