--- a/frontend/src/components/Notification/styles.scss
+++ b/frontend/src/components/Notification/styles.scss
@@ -5,9 +5,16 @@
         position: absolute;
         right: -60px;
         width: $max-notifi-width;
-        min-height: 200px;
+        max-height: 362px;
         justify-content: center;
-        align-items: center;
+        overflow-y: auto;
         @include boxBorder(yes);
+        .loading {
+            display: flex;
+            padding: 30px 0;
+        }
+        .notification {
+            width: 100%;
+        }
     }
 }
