--- a/frontend/src/components/UserProfile/styles.scss
+++ b/frontend/src/components/UserProfile/styles.scss
@@ -38,19 +38,23 @@
                         line-height: 40px;
                         font-weight: 200;
                     }
-                    a {
-                        display: block;
+                    .option {
+                        display: flex;
                         flex-shrink: 0;
-                        margin-left: 20px;
-                        padding: 0 20px; 
-                        height: 26px;
-                        line-height: 26px;
-                        border: 1px solid #dbdbdb;
-                        font-weight: bold;
-                    }
-                    span {
-                        display: block;
-                        margin-left: 10px;
+                        a {
+                            display: block;
+                            flex-shrink: 0;
+                            margin-left: 20px;
+                            padding: 0 20px; 
+                            height: 26px;
+                            line-height: 26px;
+                            border: 1px solid #dbdbdb;
+                            font-weight: bold;
+                        }
+                        span {
+                            display: block;
+                            margin-left: 10px;
+                        }
                     }
                 }
                 .info {
